test_suite/tests/ui/pass/arg_vec_type.rs
use clapi::macros::*;

#[command]
#[arg(slice)]
fn test(slice: Vec<u32>){}

fn main(){}