test_suite/tests/ui/fail/invalid_attr_value_for_arg/invalid_arg_max.rs
use clapi::macros::*;

#[command]
#[arg(x, min="abc")]
fn app(x: Vec<i64>){}

fn main(){}